{
    "name": "TouchInput",
    "maps": [
        {
            "name": "Touch",
            "id": "a0bdd541-9612-4fe8-88c2-d2fe2e32bc06",
            "actions": [
                {
                    "name": "TouchPosition",
                    "type": "Value",
                    "id": "c39f044b-c39a-422b-bd7f-52ecf2289dba",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "TouchPress",
                    "type": "Button",
                    "id": "f9f31cc6-a65f-42c7-88ae-9c7d03c71489",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "aabfd39e-2109-4a3a-8222-d0786d1b885f",
                    "path": "<Mouse>/position",
                    "interactions": "",
                    "processors": "",
                    "groups": "Mouse",
                    "action": "TouchPosition",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "9851894a-5da6-4370-9eec-7acd86b6c4c4",
                    "path": "<Touchscreen>/primaryTouch/position",
                    "interactions": "",
                    "processors": "",
                    "groups": "Touchscreen",
                    "action": "TouchPosition",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "dddff7e4-c89b-4f5a-b653-7908b8f1ece5",
                    "path": "<Mouse>/leftButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "Mouse",
                    "action": "TouchPress",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "d199c1a8-98e2-4376-bad3-f9a0f49cfc8d",
                    "path": "<Touchscreen>/primaryTouch/press",
                    "interactions": "",
                    "processors": "",
                    "groups": "Touchscreen",
                    "action": "TouchPress",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": [
        {
            "name": "Mouse",
            "bindingGroup": "Mouse",
            "devices": []
        },
        {
            "name": "Touchscreen",
            "bindingGroup": "Touchscreen",
            "devices": []
        }
    ]
}